# nextcloud-rs

./: Cargo.toml  README.md
examples/: login.rs  passwords.rs
examples/common/: mod.rs
src/: client.rs  endpoint.rs  errors.rs  lib.rs  main.rs  ocs_client.rs
src/passwords/: fields.rs  mod.rs  password.rs  session.rs  store.rs
