[package]
name = "nextcloud-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
dialoguer = "0.11.0"
env_logger = "0.11.7"
log = "0.4.26"
reqwest = { version = "0.12.14", features = ["json", "blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
webbrowser = "1.0.4"
