[package]
name = "nextcloud-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
confy = "0.6.1"
dialoguer = "0.11.0"
dirs = "6.0.0"
env_logger = "0.11.7"
hex = "0.4.3"
log = "0.4.26"
reqwest = { version = "0.12.14", features = ["json", "blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
url = "2.5.4"
webbrowser = "1.0.4"
zeroize = { version = "1.8.1", features = ["derive"] }
secure-hash-map = { path = "../secure-hash-map" }
rpassword = "7.3.1"
secrecy = { version = "0.10.3", features = ["serde"] }
sodiumoxide = "0.2.7"
futures = "0.3.31"
libc = "0.2.171"
clap = "4.5.32"

[[bin]]
name = "ncpass"
path = "src/bin/ncpass.rs"
